# cosmetic-catalog-bot

./: .gitignore  README.md  alembic.ini  pyproject.toml  run_bot.py  run_parser.py
api/bot/: views.py
api/utils/: db.py
bot/: __init__.py  filters.py  handlers.py  middleware.py  states.py  text.py  utils.py
core/: app.py  config.py  cors.py  database.py  docs.py  models.py
migrations/: env.py
migrations/versions/: c7b128bf85e3_.py
parsers/bloombeauty/: api.py  run.py
