[tool.poetry]
name = "cosmetics"
version = "0.1.0"
description = ""
authors = ["Mukhtarov Rustam mrustam9929@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
sqlalchemy = "^2.0.22"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
sentry-sdk = "^1.32.0"
uvicorn = "^0.23.2"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.9"
pytelegrambotapi = "^4.14.0"
loguru = "^0.7.2"
fastapi-pagination = "^0.12.11"
python-slugify = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
